Forgot to connect stop service

--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -366,6 +366,7 @@
                                     <property name="image">stop_png</property>
                                     <property name="relief">half</property>
                                     <property name="always_show_image">True</property>
+                                    <signal name="clicked" handler="on_btn_service_stop_clicked" swapped="no"/>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
