--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -43,6 +43,7 @@
     <property name="window_position">center</property>
     <property name="default_width">1024</property>
     <property name="default_height">768</property>
+    <property name="icon">newlogo-16x16.png</property>
     <signal name="destroy" handler="on_window-root_destroy" swapped="no"/>
     <child>
       <object class="GtkBox" id="vbox_main">
