--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -58,8 +58,11 @@
     <property name="pixbuf">media/media-playlist-shuffle.png</property>
   </object>
   <object class="GtkWindow" id="window-root">
+    <property name="width_request">1024</property>
+    <property name="height_request">768</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Fujicoin UI</property>
+    <property name="resizable">False</property>
     <property name="window_position">center</property>
     <property name="default_width">1024</property>
     <property name="default_height">768</property>
