--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -229,6 +229,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="wide_handle">True</property>
+            <signal name="move-handle" handler="on_paned_move_handle" swapped="no"/>
             <child>
               <object class="GtkBox" id="vbox_sidebar">
                 <property name="visible">True</property>
@@ -328,11 +329,12 @@
               </object>
               <packing>
                 <property name="resize">False</property>
-                <property name="shrink">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
             <child>
               <object class="GtkNotebook" id="notebook">
+                <property name="width_request">950</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="show_tabs">False</property>
@@ -548,6 +550,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">Account</property>
+                                    <property name="justify">fill</property>
                                     <attributes>
                                       <attribute name="size" value="15000"/>
                                     </attributes>
@@ -563,6 +566,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">Category</property>
+                                    <property name="justify">fill</property>
                                     <property name="xalign">0.44999998807907104</property>
                                     <attributes>
                                       <attribute name="size" value="15000"/>
@@ -579,6 +583,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">Amount</property>
+                                    <property name="justify">fill</property>
                                     <property name="xalign">0.44999998807907104</property>
                                     <attributes>
                                       <attribute name="size" value="15000"/>
@@ -598,16 +603,59 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkListBox" id="listbox_transaction">
+                              <object class="GtkBox" id="hbox_drp_transaction">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="selection_mode">none</property>
-                                <property name="activate_on_single_click">False</property>
+                                <property name="margin_left">5</property>
+                                <property name="margin_right">5</property>
+                                <child>
+                                  <object class="GtkComboBoxText" id="drp_tran_account">
+                                    <property name="width_request">150</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="tooltip_text" translatable="yes">Filter Account</property>
+                                    <property name="margin_left">70</property>
+                                    <signal name="changed" handler="on_drp_tran_account_changed" swapped="no"/>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkComboBoxText" id="drp_tran_category">
+                                    <property name="width_request">150</property>
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="tooltip_text" translatable="yes">Filter Category</property>
+                                    <property name="margin_left">160</property>
+                                    <signal name="changed" handler="on_drp_tran_category_changed" swapped="no"/>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
                                 <property name="fill">True</property>
                                 <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkListBox" id="listbox_transaction">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="selection_mode">multiple</property>
+                                <property name="activate_on_single_click">False</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                           </object>
@@ -796,6 +844,7 @@
                                   <object class="GtkEntry" id="txt_node_name">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="tooltip_text" translatable="yes">Insert Node to Add</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -834,7 +883,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkButton" id="btn_remove_node">
-                                    <property name="label" translatable="yes">Remove selected</property>
+                                    <property name="label" translatable="yes">Remove Selected Node</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -906,6 +955,7 @@
                               <object class="GtkListBox" id="listbox_nodes">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
+                                <property name="selection_mode">multiple</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -966,7 +1016,7 @@
               </object>
               <packing>
                 <property name="resize">True</property>
-                <property name="shrink">True</property>
+                <property name="shrink">False</property>
               </packing>
             </child>
           </object>
