--- a/glade/style.css
+++ b/glade/style.css
@@ -14,6 +14,6 @@ GtkListBoxRow:selected {
 GtkPaned. GtkScrolledWindow, GtkViewport {
     border: none;
 }
-GtkLabel {
+GtkLabel, GtkComboBoxText * {
     color: #fff;
 }
