--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -2,10 +2,17 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
-  <object class="GtkAdjustment" id="adj_move_spin">
-    <property name="upper">100000</property>
+  <object class="GtkAdjustment" id="adj_amount_move">
+    <property name="upper">1000</property>
     <property name="step_increment">0.01</property>
-    <property name="page_increment">0.10000000000000001</property>
+    <property name="page_increment">1</property>
+  </object>
+  <object class="GtkAdjustment" id="adj_minconf_move">
+    <property name="lower">1</property>
+    <property name="upper">100</property>
+    <property name="value">1</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
   <object class="GtkImage" id="home_png">
     <property name="visible">True</property>
@@ -470,7 +477,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">Difficulty: </property>
-                                    <property name="xalign">0.10999999940395355</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                     <attributes>
                                       <attribute name="size" value="15000"/>
                                     </attributes>
@@ -486,7 +493,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">Errors: </property>
-                                    <property name="xalign">0.090000003576278687</property>
+                                    <property name="xalign">0.10000000149011612</property>
                                     <attributes>
                                       <attribute name="size" value="15000"/>
                                     </attributes>
@@ -505,12 +512,12 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkBox" id="box1">
+                              <object class="GtkBox" id="box_big_logo">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="orientation">vertical</property>
                                 <child>
-                                  <object class="GtkImage" id="image5">
+                                  <object class="GtkImage" id="big_logo">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0.94999998807907104</property>
@@ -820,21 +827,21 @@
                         <property name="can_focus">False</property>
                         <property name="shadow_type">none</property>
                         <child>
-                          <object class="GtkBox" id="box2">
+                          <object class="GtkBox" id="hbox_cont_send_page">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="margin_left">5</property>
                             <property name="margin_right">5</property>
                             <property name="homogeneous">True</property>
                             <child>
-                              <object class="GtkBox" id="box3">
+                              <object class="GtkBox" id="vbox_cont_move">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">center</property>
                                 <property name="orientation">vertical</property>
                                 <property name="spacing">20</property>
                                 <child>
-                                  <object class="GtkLabel" id="label7">
+                                  <object class="GtkLabel" id="lbl_title_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label" translatable="yes">MOVE</property>
@@ -849,10 +856,10 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label8">
+                                  <object class="GtkLabel" id="lbl_from_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">From Account</property>
                                     <property name="xalign">0.05000000074505806</property>
                                   </object>
                                   <packing>
@@ -873,10 +880,10 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label9">
+                                  <object class="GtkLabel" id="lbl_to_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">To Account</property>
                                     <property name="xalign">0.05000000074505806</property>
                                   </object>
                                   <packing>
@@ -897,10 +904,10 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label10">
+                                  <object class="GtkLabel" id="lbl_amount_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">Amount</property>
                                     <property name="xalign">0.05000000074505806</property>
                                   </object>
                                   <packing>
@@ -910,9 +917,12 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkSpinButton" id="spinbutton1">
+                                  <object class="GtkSpinButton" id="spin_amount_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="adjustment">adj_amount_move</property>
+                                    <property name="digits">8</property>
+                                    <property name="numeric">True</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -921,10 +931,10 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label11">
+                                  <object class="GtkLabel" id="lbl_minconf_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">Minconf [default=1]</property>
                                     <property name="xalign">0.05000000074505806</property>
                                   </object>
                                   <packing>
@@ -934,9 +944,12 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkSpinButton" id="spinbutton2">
+                                  <object class="GtkSpinButton" id="spin_minconf_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
+                                    <property name="adjustment">adj_minconf_move</property>
+                                    <property name="numeric">True</property>
+                                    <property name="value">1</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -945,10 +958,10 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label12">
+                                  <object class="GtkLabel" id="lbl_comment_move">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="label" translatable="yes">label</property>
+                                    <property name="label" translatable="yes">Comment [optional]</property>
                                     <property name="xalign">0.05000000074505806</property>
                                   </object>
                                   <packing>
@@ -969,11 +982,14 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkButton" id="button1">
-                                    <property name="label" translatable="yes">button</property>
+                                  <object class="GtkButton" id="btn_move">
+                                    <property name="label">gtk-ok</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
+                                    <property name="relief">half</property>
+                                    <property name="use_stock">True</property>
+                                    <property name="always_show_image">True</property>
                                   </object>
                                   <packing>
                                     <property name="expand">False</property>
@@ -989,7 +1005,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkBox" id="box4">
+                              <object class="GtkBox" id="vbox_cont_send">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">center</property>
