--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -14,6 +14,13 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="adj_spin_count_tran">
+    <property name="lower">10</property>
+    <property name="upper">1000</property>
+    <property name="value">10</property>
+    <property name="step_increment">10</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkImage" id="home_png">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -570,18 +577,45 @@
                             <property name="margin_bottom">3</property>
                             <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkButton" id="button1">
-                                <property name="label" translatable="yes">Show More</property>
+                              <object class="GtkBox" id="box1">
                                 <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="receives_default">True</property>
-                                <property name="halign">end</property>
-                                <property name="relief">half</property>
-                                <property name="xalign">1</property>
+                                <property name="can_focus">False</property>
+                                <child>
+                                  <object class="GtkLabel" id="label7">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">False</property>
+                                    <property name="halign">end</property>
+                                    <property name="margin_left">750</property>
+                                    <property name="label" translatable="yes">Display last </property>
+                                    <property name="xalign">0</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkSpinButton" id="spin_count_tran">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="halign">end</property>
+                                    <property name="adjustment">adj_spin_count_tran</property>
+                                    <property name="numeric">True</property>
+                                    <property name="value">10</property>
+                                    <signal name="value-changed" handler="on_spin_count_tran_value_changed" swapped="no"/>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="fill">True</property>
+                                    <property name="pack_type">end</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="fill">False</property>
+                                <property name="fill">True</property>
                                 <property name="position">0</property>
                               </packing>
                             </child>
