--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -576,12 +576,13 @@
                             <property name="margin_right">5</property>
                             <property name="margin_bottom">3</property>
                             <property name="orientation">vertical</property>
+                            <property name="spacing">5</property>
                             <child>
-                              <object class="GtkBox" id="box1">
+                              <object class="GtkBox" id="hbox_count_tran">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <child>
-                                  <object class="GtkLabel" id="label7">
+                                  <object class="GtkLabel" id="lbl_count_tran">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="halign">end</property>
