--- a/glade/fujicoin-ui.glade
+++ b/glade/fujicoin-ui.glade
@@ -319,7 +319,6 @@
                     <property name="relief">none</property>
                     <property name="image_position">bottom</property>
                     <property name="always_show_image">True</property>
-                    <signal name="clicked" handler="on_btn_receive_clicked" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -712,6 +711,16 @@
                                     <property name="can_focus">False</property>
                                     <property name="tooltip_text" translatable="yes">Filter Category</property>
                                     <property name="margin_left">160</property>
+                                    <property name="active">0</property>
+                                    <items>
+                                      <item id="0" translatable="yes">ALL</item>
+                                      <item id="1" translatable="yes">receive</item>
+                                      <item id="2" translatable="yes">send</item>
+                                      <item id="3" translatable="yes">move</item>
+                                      <item id="4" translatable="yes">orphan</item>
+                                      <item id="5" translatable="yes">immature</item>
+                                      <item id="6" translatable="yes">generate</item>
+                                    </items>
                                     <signal name="changed" handler="on_drp_tran_category_changed" swapped="no"/>
                                   </object>
                                   <packing>
